Add teacher schedule and student group rating
